--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,7 +5,9 @@ description = "Default template for PDM package"
 authors = [
     {name = "Marcus Costa Graciano", email = "marcusviniciusgraciano04@gmail.com"},
 ]
-dependencies = []
+dependencies = [
+    "django>=5.0.4",
+]
 requires-python = "==3.11.*"
 readme = "README.md"
 license = {text = "MIT"}
