--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ authors = [
 ]
 dependencies = [
     "django>=5.0.4",
+    "djangorestframework>=3.15.1",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
