--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "django>=5.0.4",
     "djangorestframework>=3.15.1",
+    "django-cors-headers>=4.3.1",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
