--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "Gianluca Starke", email = "gianlucastarke@gmail.com"},
     {name = "Marcus Costa Graciano", email = "marcusviniciusgraciano04@gmail.com"},
+    {name = "Pietro Flemming", email = "pietroflemming@gmail.com"},
 ]
 dependencies = []
 requires-python = "==3.11.*"
