--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "django>=5.0.4",
     "djangorestframework>=3.15.1",
     "django-cors-headers>=4.3.1",
+    "djangorestframework-simplejwt>=5.3.1",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
