--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ authors = [
     {name = "Gianluca Starke", email = "gianlucastarke@gmail.com"},
     {name = "Marcus Costa Graciano", email = "marcusviniciusgraciano04@gmail.com"},
     {name = "Pietro Flemming", email = "pietroflemming@gmail.com"},
+    {name = "João Vitor Coêlho", email = "joao.vitor-coelho@hotmail.com"},
 ]
 dependencies = []
 requires-python = "==3.11.*"
